platform-sdk/swirlds-config-processor/src/main/java/com/swirlds/config/processor/antlr/generated/JavadocParser.java
/*
 * Copyright (C) 2023 Hedera Hashgraph, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.swirlds.config.processor.antlr.generated; // Generated from JavadocParser.g4 by ANTLR 4.13.0

import java.util.List;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JavadocParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    public static final int NAME = 1,
            NEWLINE = 2,
            SPACE = 3,
            TEXT_CONTENT = 4,
            AT = 5,
            STAR = 6,
            SLASH = 7,
            JAVADOC_START = 8,
            JAVADOC_END = 9,
            INLINE_TAG_START = 10,
            BRACE_OPEN = 11,
            BRACE_CLOSE = 12;
    public static final int RULE_documentation = 0,
            RULE_documentationContent = 1,
            RULE_skipWhitespace = 2,
            RULE_description = 3,
            RULE_descriptionLine = 4,
            RULE_descriptionLineStart = 5,
            RULE_descriptionLineNoSpaceNoAt = 6,
            RULE_descriptionLineElement = 7,
            RULE_descriptionLineText = 8,
            RULE_descriptionNewline = 9,
            RULE_tagSection = 10,
            RULE_blockTag = 11,
            RULE_blockTagName = 12,
            RULE_blockTagContent = 13,
            RULE_blockTagText = 14,
            RULE_blockTagTextElement = 15,
            RULE_inlineTag = 16,
            RULE_inlineTagName = 17,
            RULE_inlineTagContent = 18,
            RULE_braceExpression = 19,
            RULE_braceContent = 20,
            RULE_braceText = 21;

    private static String[] makeRuleNames() {
        return new String[] {
            "documentation",
            "documentationContent",
            "skipWhitespace",
            "description",
            "descriptionLine",
            "descriptionLineStart",
            "descriptionLineNoSpaceNoAt",
            "descriptionLineElement",
            "descriptionLineText",
            "descriptionNewline",
            "tagSection",
            "blockTag",
            "blockTagName",
            "blockTagContent",
            "blockTagText",
            "blockTagTextElement",
            "inlineTag",
            "inlineTagName",
            "inlineTagContent",
            "braceExpression",
            "braceContent",
            "braceText"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] {null, null, null, null, null, "'@'", "'*'", "'/'", null, null, "'{@'", "'{'", "'}'"};
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[] {
            null,
            "NAME",
            "NEWLINE",
            "SPACE",
            "TEXT_CONTENT",
            "AT",
            "STAR",
            "SLASH",
            "JAVADOC_START",
            "JAVADOC_END",
            "INLINE_TAG_START",
            "BRACE_OPEN",
            "BRACE_CLOSE"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "JavadocParser.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public JavadocParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DocumentationContext extends ParserRuleContext {
        public TerminalNode EOF() {
            return getToken(JavadocParser.EOF, 0);
        }

        public TerminalNode JAVADOC_START() {
            return getToken(JavadocParser.JAVADOC_START, 0);
        }

        public DocumentationContentContext documentationContent() {
            return getRuleContext(DocumentationContentContext.class, 0);
        }

        public TerminalNode JAVADOC_END() {
            return getToken(JavadocParser.JAVADOC_END, 0);
        }

        public List<SkipWhitespaceContext> skipWhitespace() {
            return getRuleContexts(SkipWhitespaceContext.class);
        }

        public SkipWhitespaceContext skipWhitespace(int i) {
            return getRuleContext(SkipWhitespaceContext.class, i);
        }

        public DocumentationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_documentation;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof JavadocParserListener) {
                ((JavadocParserListener) listener).enterDocumentation(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof JavadocParserListener) {
                ((JavadocParserListener) listener).exitDocumentation(this);
            }
        }
    }

    public final DocumentationContext documentation() throws RecognitionException {
        DocumentationContext _localctx = new DocumentationContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_documentation);
        try {
            int _alt;
            setState(65);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case EOF:
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(44);
                        match(EOF);
                    }
                    break;
                case JAVADOC_START:
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(45);
                        match(JAVADOC_START);
                        setState(49);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                            if (_alt == 1) {
                                {
                                    {
                                        setState(46);
                                        skipWhitespace();
                                    }
                                }
                            }
                            setState(51);
                            _errHandler.sync(this);
                            _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                        }
                        setState(52);
                        documentationContent();
                        setState(53);
                        match(JAVADOC_END);
                        setState(54);
                        match(EOF);
                    }
                    break;
                case NAME:
                case NEWLINE:
                case SPACE:
                case TEXT_CONTENT:
                case AT:
                case STAR:
                case SLASH:
                case INLINE_TAG_START:
                case BRACE_OPEN:
                case BRACE_CLOSE:
                    enterOuterAlt(_localctx, 3);
                    {
                        setState(59);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                            if (_alt == 1) {
                                {
                                    {
                                        setState(56);
                                        skipWhitespace();
                                    }
                                }
                            }
                            setState(61);
                            _errHandler.sync(this);
                            _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                        }
                        setState(62);
                        documentationContent();
                        setState(63);
                        match(EOF);
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DocumentationContentContext extends ParserRuleContext {
        public DescriptionContext description() {
            return getRuleContext(DescriptionContext.class, 0);
        }

        public List<SkipWhitespaceContext> skipWhitespace() {
            return getRuleContexts(SkipWhitespaceContext.class);
        }

        public SkipWhitespaceContext skipWhitespace(int i) {
            return getRuleContext(SkipWhitespaceContext.class, i);
        }

        public TagSectionContext tagSection() {
            return getRuleContext(TagSectionContext.class, 0);
        }

        public List<TerminalNode> NEWLINE() {
            return getTokens(JavadocParser.NEWLINE);
        }

        public TerminalNode NEWLINE(int i) {
            return getToken(JavadocParser.NEWLINE, i);
        }

        public DocumentationContentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_documentationContent;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof JavadocParserListener) {
                ((JavadocParserListener) listener).enterDocumentationContent(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof JavadocParserListener) {
                ((JavadocParserListener) listener).exitDocumentationContent(this);
            }
        }
    }

    public final DocumentationContentContext documentationContent() throws RecognitionException {
        DocumentationContentContext _localctx = new DocumentationContentContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_documentationContent);
        int _la;
        try {
            int _alt;
            setState(95);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(67);
                        description();
                        setState(71);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == NEWLINE || _la == SPACE) {
                            {
                                {
                                    setState(68);
                                    skipWhitespace();
                                }
                            }
                            setState(73);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                    break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(77);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                            if (_alt == 1) {
                                {
                                    {
                                        setState(74);
                                        skipWhitespace();
                                    }
                                }
                            }
                            setState(79);
                            _errHandler.sync(this);
                            _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                        }
                        setState(80);
                        tagSection();
                    }
                    break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                    {
                        setState(81);
                        description();
                        setState(83);
                        _errHandler.sync(this);
                        _alt = 1;
                        do {
                            switch (_alt) {
                                case 1:
                                    {
                                        {
                                            setState(82);
                                            match(NEWLINE);
                                        }
                                    }
                                    break;
                                default:
                                    throw new NoViableAltException(this);
                            }
                            setState(85);
                            _errHandler.sync(this);
                            _alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
                        } while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER);
                        setState(90);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input, 6, _ctx);
                        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                            if (_alt == 1) {
                                {
                                    {
                                        setState(87);
                                        skipWhitespace();
                                    }
                                }
                            }
                            setState(92);
                            _errHandler.sync(this);
                            _alt = getInterpreter().adaptivePredict(_input, 6, _ctx);
                        }
                        setState(93);
                        tagSection();
                    }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class SkipWhitespaceContext extends ParserRuleContext {
        public TerminalNode SPACE() {
            return getToken(JavadocParser.SPACE, 0);
        }

        public TerminalNode NEWLINE() {
            return getToken(JavadocParser.NEWLINE, 0);
        }

        public SkipWhitespaceContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_skipWhitespace;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof JavadocParserListener) {
                ((JavadocParserListener) listener).enterSkipWhitespace(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof JavadocParserListener) {
                ((JavadocParserListener) listener).exitSkipWhitespace(this);
            }
        }
    }

    public final SkipWhitespaceContext skipWhitespace() throws RecognitionException {
        SkipWhitespaceContext _localctx = new SkipWhitespaceContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_skipWhitespace);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(97);
                _la = _input.LA(1);
                if (!(_la == NEWLINE || _la == SPACE)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) {
                        matchedEOF = true;
                    }
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DescriptionContext extends ParserRuleContext {
        public List<DescriptionLineContext> descriptionLine() {
            return getRuleContexts(DescriptionLineContext.class);
        }

        public DescriptionLineContext descriptionLine(int i) {
            return getRuleContext(DescriptionLineContext.class, i);
        }

        public List<DescriptionNewlineContext> descriptionNewline() {
            return getRuleContexts(DescriptionNewlineContext.class);
        }

        public DescriptionNewlineContext descriptionNewline(int i) {
            return getRuleContext(DescriptionNewlineContext.class, i);
        }

        public DescriptionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_description;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof JavadocParserListener) {
                ((JavadocParserListener) listener).enterDescription(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof JavadocParserListener) {
                ((JavadocParserListener) listener).exitDescription(this);
            }
        }
    }

    public final DescriptionContext description() throws RecognitionException {
        DescriptionContext _localctx = new DescriptionContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_description);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(99);
                descriptionLine();
                setState(109);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
                while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(101);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                                do {
                                    {
                                        {
                                            setState(100);
                                            descriptionNewline();
                                        }
                                    }
                                    setState(103);
                                    _errHandler.sync(this);
                                    _la = _input.LA(1);
                                } while (_la == NEWLINE);
                                setState(105);
                                descriptionLine();
                            }
                        }
                    }
                    setState(111);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DescriptionLineContext extends ParserRuleContext {
        public DescriptionLineStartContext descriptionLineStart() {
            return getRuleContext(DescriptionLineStartContext.class, 0);
        }

        public List<DescriptionLineElementContext> descriptionLineElement() {
            return getRuleContexts(DescriptionLineElementContext.class);
        }

        public DescriptionLineElementContext descriptionLineElement(int i) {
            return getRuleContext(DescriptionLineElementContext.class, i);
        }

        public InlineTagContext inlineTag() {
            return getRuleContext(InlineTagContext.class, 0);
        }

        public DescriptionLineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_descriptionLine;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof JavadocParserListener) {
                ((JavadocParserListener) listener).enterDescriptionLine(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof JavadocParserListener) {
                ((JavadocParserListener) listener).exitDescriptionLine(this);
            }
        }
    }

    public final DescriptionLineContext descriptionLine() throws RecognitionException {
        DescriptionLineContext _localctx = new DescriptionLineContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_descriptionLine);
        try {
            int _alt;
            setState(126);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case NAME:
                case SPACE:
                case TEXT_CONTENT:
                case STAR:
                case SLASH:
                case BRACE_OPEN:
                case BRACE_CLOSE:
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(112);
                        descriptionLineStart();
                        setState(116);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input, 10, _ctx);
                        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                            if (_alt == 1) {
                                {
                                    {
                                        setState(113);
                                        descriptionLineElement();
                                    }
                                }
                            }
                            setState(118);
                            _errHandler.sync(this);
                            _alt = getInterpreter().adaptivePredict(_input, 10, _ctx);
                        }
                    }
                    break;
                case INLINE_TAG_START:
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(119);
                        inlineTag();
                        setState(123);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input, 11, _ctx);
                        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                            if (_alt == 1) {
                                {
                                    {
                                        setState(120);
                                        descriptionLineElement();
                                    }
                                }
                            }
                            setState(125);
                            _errHandler.sync(this);
                            _alt = getInterpreter().adaptivePredict(_input, 11, _ctx);
                        }
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DescriptionLineStartContext extends ParserRuleContext {
        public List<TerminalNode> SPACE() {
            return getTokens(JavadocParser.SPACE);
        }

        public TerminalNode SPACE(int i) {
            return getToken(JavadocParser.SPACE, i);
        }

        public List<DescriptionLineNoSpaceNoAtContext> descriptionLineNoSpaceNoAt() {
            return getRuleContexts(DescriptionLineNoSpaceNoAtContext.class);
        }

        public DescriptionLineNoSpaceNoAtContext descriptionLineNoSpaceNoAt(int i) {
            return getRuleContext(DescriptionLineNoSpaceNoAtContext.class, i);
        }

        public List<TerminalNode> AT() {
            return getTokens(JavadocParser.AT);
        }

        public TerminalNode AT(int i) {
            return getToken(JavadocParser.AT, i);
        }

        public DescriptionLineStartContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_descriptionLineStart;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof JavadocParserListener) {
                ((JavadocParserListener) listener).enterDescriptionLineStart(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof JavadocParserListener) {
                ((JavadocParserListener) listener).exitDescriptionLineStart(this);
            }
        }
    }

    public final DescriptionLineStartContext descriptionLineStart() throws RecognitionException {
        DescriptionLineStartContext _localctx = new DescriptionLineStartContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_descriptionLineStart);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(129);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == SPACE) {
                    {
                        setState(128);
                        match(SPACE);
                    }
                }

                setState(132);
                _errHandler.sync(this);
                _alt = 1;
                do {
                    switch (_alt) {
                        case 1:
                            {
                                {
                                    setState(131);
                                    descriptionLineNoSpaceNoAt();
                                }
                            }
                            break;
                        default:
                            throw new NoViableAltException(this);
                    }
                    setState(134);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 14, _ctx);
                } while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER);
                setState(141);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 16, _ctx);
                while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            setState(139);
                            _errHandler.sync(this);
                            switch (_input.LA(1)) {
                                case NAME:
                                case TEXT_CONTENT:
                                case STAR:
                                case SLASH:
                                case BRACE_OPEN:
                                case BRACE_CLOSE:
                                    {
                                        setState(136);
                                        descriptionLineNoSpaceNoAt();
                                    }
                                    break;
                                case SPACE:
                                    {
                                        setState(137);
                                        match(SPACE);
                                    }
                                    break;
                                case AT:
                                    {
                                        setState(138);
                                        match(AT);
                                    }
                                    break;
                                default:
                                    throw new NoViableAltException(this);
                            }
                        }
                    }
                    setState(143);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 16, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DescriptionLineNoSpaceNoAtContext extends ParserRuleContext {
        public TerminalNode TEXT_CONTENT() {
            return getToken(JavadocParser.TEXT_CONTENT, 0);
        }

        public TerminalNode NAME() {
            return getToken(JavadocParser.NAME, 0);
        }

        public TerminalNode STAR() {
            return getToken(JavadocParser.STAR, 0);
        }

        public TerminalNode SLASH() {
            return getToken(JavadocParser.SLASH, 0);
        }

        public TerminalNode BRACE_OPEN() {
            return getToken(JavadocParser.BRACE_OPEN, 0);
        }

        public TerminalNode BRACE_CLOSE() {
            return getToken(JavadocParser.BRACE_CLOSE, 0);
        }

        public DescriptionLineNoSpaceNoAtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_descriptionLineNoSpaceNoAt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof JavadocParserListener) {
                ((JavadocParserListener) listener).enterDescriptionLineNoSpaceNoAt(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof JavadocParserListener) {
                ((JavadocParserListener) listener).exitDescriptionLineNoSpaceNoAt(this);
            }
        }
    }

    public final DescriptionLineNoSpaceNoAtContext descriptionLineNoSpaceNoAt() throws RecognitionException {
        DescriptionLineNoSpaceNoAtContext _localctx = new DescriptionLineNoSpaceNoAtContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_descriptionLineNoSpaceNoAt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(144);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 6354L) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) {
                        matchedEOF = true;
                    }
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DescriptionLineElementContext extends ParserRuleContext {
        public InlineTagContext inlineTag() {
            return getRuleContext(InlineTagContext.class, 0);
        }

        public DescriptionLineTextContext descriptionLineText() {
            return getRuleContext(DescriptionLineTextContext.class, 0);
        }

        public DescriptionLineElementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_descriptionLineElement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof JavadocParserListener) {
                ((JavadocParserListener) listener).enterDescriptionLineElement(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof JavadocParserListener) {
                ((JavadocParserListener) listener).exitDescriptionLineElement(this);
            }
        }
    }

    public final DescriptionLineElementContext descriptionLineElement() throws RecognitionException {
        DescriptionLineElementContext _localctx = new DescriptionLineElementContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_descriptionLineElement);
        try {
            setState(148);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case INLINE_TAG_START:
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(146);
                        inlineTag();
                    }
                    break;
                case NAME:
                case SPACE:
                case TEXT_CONTENT:
                case AT:
                case STAR:
                case SLASH:
                case BRACE_OPEN:
                case BRACE_CLOSE:
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(147);
                        descriptionLineText();
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DescriptionLineTextContext extends ParserRuleContext {
        public List<DescriptionLineNoSpaceNoAtContext> descriptionLineNoSpaceNoAt() {
            return getRuleContexts(DescriptionLineNoSpaceNoAtContext.class);
        }

        public DescriptionLineNoSpaceNoAtContext descriptionLineNoSpaceNoAt(int i) {
            return getRuleContext(DescriptionLineNoSpaceNoAtContext.class, i);
        }

        public List<TerminalNode> SPACE() {
            return getTokens(JavadocParser.SPACE);
        }

        public TerminalNode SPACE(int i) {
            return getToken(JavadocParser.SPACE, i);
        }

        public List<TerminalNode> AT() {
            return getTokens(JavadocParser.AT);
        }

        public TerminalNode AT(int i) {
            return getToken(JavadocParser.AT, i);
        }

        public DescriptionLineTextContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_descriptionLineText;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof JavadocParserListener) {
                ((JavadocParserListener) listener).enterDescriptionLineText(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof JavadocParserListener) {
                ((JavadocParserListener) listener).exitDescriptionLineText(this);
            }
        }
    }
